@@ -10,6 +10,7 @@ import com.souf.soufwebsite.global.common.category.dto.CategoryDto;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 public record RecruitResDto(
@@ -24,7 +25,7 @@ public record RecruitResDto(
         String deadline,
         String price,
         Long totalViewCount,
-        String preferentialTreatment,
+        List<String> preferentialTreatment,
         String nickname,
         boolean recruitable,
         WorkType workType,
@@ -62,9 +63,11 @@ public record RecruitResDto(
     }
 
     private static List<MediaResDto> convertToMediaResDto(List<Media> mediaList){
-        return mediaList.stream().map(
-                MediaResDto::fromFeedDetail
-        ).collect(Collectors.toList());
+        if (mediaList == null) return List.of();
+        return mediaList.stream()
+                .map(MediaResDto::fromRecruit)
+                .filter(Objects::nonNull)
+        .toList();
     }
 
     private static String convertToDateTime(LocalDateTime dateTime){
